--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
 .App {
-  text-align: center;
+  margin-top: 5%;
+  display: flex;
+  justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App .siblings {
+  display: flex;
+  flex-direction: row;
+  padding: 24px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App .partners {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App .person {
+  width: 150px;
+  height: 20px;
+  text-align: center;
+  padding: 10px;
+  margin: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .male {
+  background-color: lightblue;
+  border-color: lightblue;
+  color: black;
+}
+
+.App .female {
+  background-color: lightpink;
+  border-color: lightpink;
+  color: black;
 }
